--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,16 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
-<%=Home.parseFeed('http://www.woot.com/Blog/Feed.ashx', 10)%>
+<%
+      feed_url = "http://www.woot.com/Blog/Feed.ashx" 
+      output = "";
+      open(feed_url) do |http|
+        response = http.read
+        result = RSS::Parser.parse(response, false)
+        output = "<span class=\"feedTitle\">#{result.channel.title}</span><br /><ul>" 
+        result.items.each_with_index do |item, i|
+          output += "<li><a href=\"#{item.link}\">#{item.title}</a></li>" if ++i < 10  
+        end 
+        output += "</ul>" 
+      end
+%>
+<%=output%>
