--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,8 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 <%
-      feed_url = "feeds.feedburner.com/RobbyOnRails" 
+require 'open-uri'
+      feed_url = "http://feeds.feedburner.com/RobbyOnRails" 
       output = "";
       open(feed_url) do |http|
         response = http.read
