--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 <%
+require 'rss/2.0'
 require 'open-uri'
       feed_url = "http://feeds.feedburner.com/RobbyOnRails" 
       output = "";
