--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 <%
 require 'rss/2.0'
 require 'open-uri'
-      feed_url = "http://feeds.feedburner.com/RobbyOnRails" 
+      feed_url = "http://www.woot.com/Blog/Feed.ashx" 
       output = "";
       open(feed_url) do |http|
         response = http.read
