--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,8 +8,9 @@ require 'open-uri'
         result = RSS::Parser.parse(response, false)
         output = "<span class=\"feedTitle\">#{result.channel.title}</span><br /><ul>" 
         result.items.each_with_index do |item, i|
-        	if #{item.category} == "Woot"
+           if #{item.category} == "Woot"
          	 output += "<li><a href=\"#{item.link}\">#{item.title}</a><p>#{item.description}</p></li>" if ++i < 10  
+           end 
         end 
         output += "</ul>" 
       end
