--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,10 +7,12 @@ require 'open-uri'
         response = http.read
         result = RSS::Parser.parse(response, false)
         output = "<span class=\"feedTitle\">#{result.channel.title}</span><br /><ul>" 
+        i = 0
         result.items.each_with_index do |item, i|
-          if item.category.eql? "Woot"
-         	 output += "<li><a href=\"#{item.link}\">#{item.title}</a><h3>#{item.category}</h3><p>#{item.description}</p></li>" if ++i < 10  
+          if item.category.eql? "Woot" && if i < 10
+         	 output += "<li><a href=\"#{item.link}\">#{item.title}</a><h3>#{item.category}</h3><p>#{item.description}</p></li>"  
           end 
+          ++i
         end 
         output += "</ul>" 
       end
