--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,8 +8,8 @@ require 'open-uri'
         result = RSS::Parser.parse(response, false)
         output = "<span class=\"feedTitle\">#{result.channel.title}</span><br /><ul>" 
         result.items.each_with_index do |item, i|
-        output += item.category
-          if item.category == "<category>Woot</category>"
+        output += "#{item.category}"
+          if "#{item.category}" == "<category>Woot</category>"
          	 output += "<li><a href=\"#{item.link}\">#{item.title}</a><h3>#{item.category}</h3><p>#{item.description}</p></li>"  
           end 
           i = i + 1
