--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,9 +2,8 @@
 <center>
 <div class="center">
 <div class="innerSite">
-<h1 class="siteLogo"><a href="http://sahmcentral.com"><img class="logo" src="http://sahmcentral.com/images/logo-beta.png" alt="Sahmcentral.com"></a></h1>
+<h1 class="siteLogo"></h1>
 <div class="Navigation">
-    <ul><li><%= link_to 'Blog', posts_path %></li><li><%= link_to 'Announcements', announcements_path %></li><li><%= link_to 'Survey', new_survey_path%></li><li><a class="lastrow" href="/about">About Us</a></li></ul>
 </div>
 <div style="clear:both;"></div>
 <div class="siteNavBottom">
