--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,6 +10,17 @@
 </div>
 <div class="innerBody">
 <div class="Header">
+<script type="text/javascript"><!--
+google_ad_client = "pub-6224413059041410";
+/* 728x90, created 4/16/11 */
+google_ad_slot = "7349374386";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 </div>
 <div class="InnerContent">
 <div class="LeftContent">
