--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -48,6 +48,17 @@ require 'open-uri'
  </div>
 <div class="RightContent">
 <div class="Section">
+<script type="text/javascript"><!--
+google_ad_client = "pub-6224413059041410";
+/* 300x250, created 4/16/11 */
+google_ad_slot = "6217447984";
+google_ad_width = 300;
+google_ad_height = 250;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 </div>
 </div>
 </div>
