--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -50,10 +50,7 @@ require 'open-uri'
         result = RSS::Parser.parse(response, false)
          output += "<span class=\"feedTitle\">#{result.channel.title}</span><br /><ul>" 
         result.items.each_with_index do |item, i|
-          if "#{item.category}" == "<category>Woot</category>"
-         	 output += "<li><a href=\"#{item.link}\">#{item.title}</a><h3>#{item.category}</h3><p>#{item.description}</p></li>"  
-          	 break
-          end 
+         	 output += "<li><a href=\"#{item.link}\">#{item.title}</a><p>#{item.description}</p></li>"  
         end 
         output += "</ul>" 
       end
@@ -65,9 +62,22 @@ require 'open-uri'
 <div class="Section">
 <script type="text/javascript"><!--
 google_ad_client = "pub-6224413059041410";
+/* 120x600, created 4/16/11 */
+google_ad_slot = "4336730596";
+google_ad_width = 120;
+google_ad_height = 600;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</div>
+<div class="Section">
+<script type="text/javascript"><!--
+google_ad_client = "pub-6224413059041410";
 /* 300x250, created 4/16/11 */
 google_ad_slot = "6217447984";
-google_ad_width = 300;
+google_ad_width = 200;
 google_ad_height = 250;
 //-->
 </script>
