--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -43,28 +43,48 @@ require 'open-uri'
         end 
         output += "</ul>" 
       end
-      #Group on Phoenix
-      feed_url = "http://feeds.feedburner.com/grouponphoenix" 
-      open(feed_url) do |http|
-        response = http.read
-        result = RSS::Parser.parse(response, false)
-         output += "<span class=\"feedTitle\">#{result.channel.title}</span><br /><ul>" 
-        result.items.each_with_index do |item, i|
-         	 output += "<li><a href=\"#{item.link}\">#{item.title}</a><p>#{item.description}</p></li>"  
-        end 
-        output += "</ul>" 
-      end
+<%=raw render :text => output%>
+<script type="text/javascript"><!--
+google_ad_client = "pub-6224413059041410";
+/* 728x90, created 4/16/11 */
+google_ad_slot = "7349374386";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>      
+<%
+  #Group on Phoenix
+  feed_url = "http://feeds.feedburner.com/grouponphoenix" 
+  output = "";
+  open(feed_url) do |http|
+    response = http.read
+    result = RSS::Parser.parse(response, false)
+     output += "<span class=\"feedTitle\">#{result.channel.title}</span><br /><ul>" 
+    result.items.each_with_index do |item, i|
+     	 output += "<li><a href=\"#{item.link}\">#{item.title}</a><p>#{item.description}</p></li>" if ++i < 4  
+    end 
+    output += "</ul>" 
+  end
 %>
 <%=raw render :text => output%>
+<script type="text/javascript"><!--
+google_ad_client = "pub-6224413059041410";
+/* 728x90, created 4/16/11 */
+google_ad_slot = "7349374386";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
  </div>
  </div>
 <div class="RightContent">
 <div class="Section">
+<div>
 <script type="text/javascript"><!--
 google_ad_client = "pub-6224413059041410";
 /* 120x600, created 4/16/11 */
 google_ad_slot = "4336730596";
-google_ad_width = 120;
+google_ad_width = 200;
 google_ad_height = 600;
 //-->
 </script>
@@ -72,7 +92,9 @@ google_ad_height = 600;
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 </div>
+</div>
 <div class="Section">
+<div>
 <script type="text/javascript"><!--
 google_ad_client = "pub-6224413059041410";
 /* 300x250, created 4/16/11 */
@@ -81,9 +103,7 @@ google_ad_width = 200;
 google_ad_height = 250;
 //-->
 </script>
-<script type="text/javascript"
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+</div>
 </div>
 </div>
 </div>
