--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -69,6 +69,9 @@ google_ad_width = 200;
 google_ad_height = 600;
 //-->
 </script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 </div>
 </div>
 <div class="Section">
