--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -65,6 +65,17 @@ require 'open-uri'
     end 
     output += "</ul>" 
   end
+  #Group on Miami
+  feed_url = "http://feeds.feedburner.com/grouponmiami" 
+  open(feed_url) do |http|
+    response = http.read
+    result = RSS::Parser.parse(response, false)
+     output += "<span class=\"feedTitle\">#{result.channel.title}</span><br /><ul>" 
+    result.items.each_with_index do |item, i|
+     	 output += "<li><a href=\"#{item.link}\">#{item.title}</a><p>#{item.description}</p></li>" if ++i < 4  
+    end 
+    output += "</ul>" 
+  end  
 %>
 <%=raw render :text => output%>
 <script type="text/javascript"><!--
