--- a/app/views/grouponphoenix/index.html.erb
+++ b/app/views/grouponphoenix/index.html.erb
@@ -1,2 +1,87 @@
-<h1>Grouponphoenix#index</h1>
-<p>Find me in app/views/grouponphoenix/index.html.erb</p>
+<body topmargin="0" bottommargin="0">
+<center>
+<div class="center">
+<div class="innerSite">
+<h1 class="siteLogo"></h1>
+<div class="Navigation">
+</div>
+<div style="clear:both;"></div>
+<div class="siteNavBottom">
+</div>
+<div class="innerBody">
+<div class="Header">
+<script type="text/javascript"><!--
+google_ad_client = "pub-6224413059041410";
+/* 728x90, created 4/16/11 */
+google_ad_slot = "7349374386";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</div>
+<div class="InnerContent">
+<div class="LeftContent">
+<div class="PadLeft">
+<%
+require 'rss/2.0'
+require 'open-uri'  
+  #Group on Phoenix
+  feed_url = "http://feeds.feedburner.com/grouponphoenix" 
+  open(feed_url) do |http|
+    response = http.read
+    result = RSS::Parser.parse(response, false)
+     output += "<span class=\"feedTitle\">#{result.channel.title}</span><br /><ul>" 
+    result.items.each_with_index do |item, i|
+     	 output += "<li><a href=\"#{item.link}\">#{item.title}</a><p>#{item.description}</p></li>" 
+    end 
+    output += "</ul>" 
+  end
+%>
+<%=raw render :text => output%>
+ </div>
+ </div>
+<div class="RightContent">
+<div class="Section">
+<div>
+<script type="text/javascript"><!--
+google_ad_client = "pub-6224413059041410";
+/* 120x600, created 4/16/11 */
+google_ad_slot = "4336730596";
+google_ad_width = 200;
+google_ad_height = 600;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</div>
+</div>
+<div class="Section">
+<div>
+<script type="text/javascript"><!--
+google_ad_client = "pub-6224413059041410";
+/* 120x600, created 4/16/11 */
+google_ad_slot = "4336730596";
+google_ad_width = 200;
+google_ad_height = 600;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</div>
+</div>
+</div>
+</div>
+<div class="footer">
+<div class="clear"></div>
+Copyright 2011 &copy; chattytree.com, All rights reserved.
+</div>
+</div>
+</div>
+</div>
+</center>
+</body>
