--- a/app/views/grouponphoenix/index.html.erb
+++ b/app/views/grouponphoenix/index.html.erb
@@ -30,6 +30,7 @@ require 'rss/2.0'
 require 'open-uri'  
   #Group on Phoenix
   feed_url = "http://feeds.feedburner.com/grouponphoenix" 
+  output = ""
   open(feed_url) do |http|
     response = http.read
     result = RSS::Parser.parse(response, false)
