--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
+  <meta name="google-site-verification" content="4Q2gfIvR92s2Z3SDap9_6Yreej3U8OD9yLlyTm5s3wk" />
   <script type="text/javascript">
 
   var _gaq = _gaq || [];
