--- a/app/views/partials/_bottom.html.erb
+++ b/app/views/partials/_bottom.html.erb
@@ -2,6 +2,12 @@
  </div>
 <div class="RightContent">
 <div class="Section">
+<h3>Groupon</h3>
+ 	<div><a href="http://chattytree.com/groupon/chicago">Chicago</a></div>
+    <div><a href="http://chattytree.com/groupon/phoenix">Phoenix</a></div>
+    <div><a href="http://chattytree.com/groupon/miami">Miami</a></div>
+</div>
+<div class="Section">
 <div>
 <script type="text/javascript"><!--
 google_ad_client = "pub-6224413059041410";
