added rss feed reader function

--- a/app/views/partials/_bottom.html.erb
+++ b/app/views/partials/_bottom.html.erb
@@ -2,12 +2,13 @@
  </div>
 <div class="RightContent">
 <div class="Section">
-<h3>Groupon</h3>
- 	<div><a href="http://chattytree.com/groupon/chicago">Chicago</a></div>
-    <div><a href="http://chattytree.com/groupon/phoenix">Phoenix</a></div>
-    <div><a href="http://chattytree.com/groupon/miami">Miami</a></div>
+<h3><a href="http://chattytree.com/groupon/index" title="Groupon">Groupon</a></h3>
+ 	<div><a href="http://chattytree.com/groupon/chicago" title="Groupon Chicago">Chicago</a></div>
+    <div><a href="http://chattytree.com/groupon/phoenix" title="Groupon Phoenix">Phoenix</a></div>
+    <div><a href="http://chattytree.com/groupon/miami" title="Groupon Miami">Miami</a></div>
 </div>
 <div class="Section">
+<h3><a href="http://chattytree.com/woot/index" title="Woot">Woot</a></h3>
 <div>
 <script type="text/javascript"><!--
 google_ad_client = "pub-6224413059041410";
