added rss feed reader function

--- a/app/views/partials/_bottom.html.erb
+++ b/app/views/partials/_bottom.html.erb
@@ -9,6 +9,11 @@
 </div>
 <div class="Section">
 <h3><a href="http://chattytree.com/woot/index" title="Woot">Woot</a></h3>
+	<div><a href="http://chattytree.com/woot/index" title="Woot Daily Deal">Daily Deal</a></div>
+<div>
+</div>
+</div>
+<div class="Section">
 <div>
 <script type="text/javascript"><!--
 google_ad_client = "pub-6224413059041410";
