added rss feed reader function

--- a/app/views/partials/_bottom.html.erb
+++ b/app/views/partials/_bottom.html.erb
@@ -2,18 +2,6 @@
  </div>
 <div class="RightContent">
 <div class="Section">
-<h3><a href="http://chattytree.com/groupon/index" title="Groupon">Groupon</a></h3>
- 	<div><a href="http://chattytree.com/groupon/chicago" title="Groupon Chicago">Chicago</a></div>
-    <div><a href="http://chattytree.com/groupon/phoenix" title="Groupon Phoenix">Phoenix</a></div>
-    <div><a href="http://chattytree.com/groupon/miami" title="Groupon Miami">Miami</a></div>
-</div>
-<div class="Section">
-<h3><a href="http://chattytree.com/woot/index" title="Woot">Woot</a></h3>
-	<div><a href="http://chattytree.com/woot/index" title="Woot Daily Deal">Daily Deal</a></div>
-<div>
-</div>
-</div>
-<div class="Section">
 <div>
 <script type="text/javascript"><!--
 google_ad_client = "pub-6224413059041410";
@@ -27,6 +15,32 @@ google_ad_height = 600;
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 </div>
+</div>
+<div class="Section">
+<h3><a href="http://chattytree.com/groupon/index" title="Groupon">Groupon</a></h3>
+    <div><a href="http://chattytree.com/groupon/abbotsford" title="Groupon Abbotsford">Abbotsford</a></div>
+    <div><a href="http://chattytree.com/groupon/abilene" title="Groupon Abilene">Abilene</a></div>
+    <div><a href="http://chattytree.com/groupon/akron_canton" title="Groupon Akron Canton">Akron Canton</a></div>
+    <div><a href="http://chattytree.com/groupon/albany_capital_region" title="Groupon Albany Capital Region">Albany Capital Region</a></div>
+    <div><a href="http://chattytree.com/groupon/albuquerque" title="Groupon Albuquerque">Albuquerque</a></div>
+    <div><a href="http://chattytree.com/groupon/allentown_reading" title="Groupon Allentown">Allentown Reading</a></div>
+    <div><a href="http://chattytree.com/groupon/amarillo" title="Groupon Amarillo">Amarillo</a></div>
+    <div><a href="http://chattytree.com/groupon/anchorage" title="Groupon Anchorage">Anchorage</a></div>
+    <div><a href="http://chattytree.com/groupon/ann_arbor" title="Groupon Ann Arbor">Ann Arbor</a></div>
+    <div><a href="http://chattytree.com/groupon/appleton" title="Groupon Appleton">Appleton</a></div>
+    <div><a href="http://chattytree.com/groupon/asheville" title="Groupon Asheville">Asheville</a></div>
+    <div><a href="http://chattytree.com/groupon/athens_ga" title="Groupon Athens Ga">Athens Ga</a></div>
+    <div><a href="http://chattytree.com/groupon/atlanta" title="Groupon Atlanta">Atlanta</a></div>
+    <div><a href="http://chattytree.com/groupon/augusta" title="Groupon Augusta">Augusta</a></div>
+    <div><a href="http://chattytree.com/groupon/austin" title="Groupon Austin">Austin</a></div>                        
+ 	<div><a href="http://chattytree.com/groupon/chicago" title="Groupon Chicago">Chicago</a></div>
+    <div><a href="http://chattytree.com/groupon/los_angeles" title="Groupon Los Angeles">Los Angeles</a></div> 	
+    <div><a href="http://chattytree.com/groupon/miami" title="Groupon Miami">Miami</a></div>  
+    <div><a href="http://chattytree.com/groupon/phoenix" title="Groupon Phoenix">Phoenix</a></div>
+</div>
+<div class="Section">
+<h3><a href="http://chattytree.com/woot/index" title="Woot">Woot</a></h3>
+	<div><a href="http://chattytree.com/woot/index" title="Woot Daily Deal">Daily Deal</a></div>
 </div>
 <div class="Section">
 <div>
